# recmatcher-full

./: .gitignore  CHANGES.md  README.md  USAGE_scene.md  movie  pyproject.toml  quick_test.md
debug_cases/padman/meta/: info.json  manifest.json  seg_meta.json
debug_cases/padman/movie/emb/: centercrop_id_map.csv  h_center_id_map.csv  (+3 more)
debug_cases/padman/queries/: context.npy  context_m.npy  right.npy  tight_m.npy
src/recmatcher/: assemble_from_match.py  draw_windows.py  types.py
src/recmatcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/recmatcher/cli/: encode_clip.py  export_one_frame.py  export_views.py  index_movie.py  match_clip.py  match_with_queries.py
src/recmatcher/config/: default.yaml
src/recmatcher/encoder/: emb_store.py  frame_sampler.py  index_builder.py  movie_indexer.py  preprocess.py  vpr_embed.py
src/recmatcher/matcher/: movie_frame_provider.py  query_io.py  query_readout.py  scene_aggregator.py  sequence_aligner.py  stage1_retriever.py  stage2_reranker.py
src/recmatcher/post/: __init__.py  scene_chain.py  scene_consensus.py
src/recmatcher/priors/: __init__.py  local_state.py
src/recmatcher/rerank/: __init__.py  score_fusion.py
src/recmatcher/tools/: npy2faiss.py
src/recmatcher/utils/: faiss_utils.py  io.py  logging.py
src/recmatcher_ui/app/: config.py  main.py  schemas.py  state.py  utils.py
src/sidecar/: app.py  run.sh  server.py
ui/: README.md
ui/backend/: requirements.txt  run.sh
ui/frontend/: index.html  package.json  vite.config.ts
ui/frontend/src/: api.ts  main.tsx
(+3 files in other folders)
